--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-asgiref
-Django
-django-admin-interface
-django-colorfield
-django-modeladmin-reorder
-flake8
-flake8-broken-line
-flake8-isort
-flake8-plugin-utils
-flake8-return
-isort
-mccabe
-mysqlclient 
-pep8-naming
-pillow
-pybitrix24 
-pycodestyle
-pyflakes
-python-dotenv
-python-slugify
-sqlparse
-text-unidecode
-tzdata
+asgiref==3.8.1
+Django==5.1.1
+django-admin-interface==0.28.9
+django-colorfield==0.11.0
+django-modeladmin-reorder==0.3.1
+flake8==7.1.1
+flake8-broken-line==1.0.0
+flake8-isort==6.1.1
+flake8-plugin-utils==1.3.3
+flake8-return==1.2.0
+isort==5.13.2
+mccabe==0.7.0
+mysqlclient==2.2.4
+pep8-naming==0.14.1
+pillow==10.4.0
+pybitrix24==1.1.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+python-dotenv==1.0.1
+python-slugify==8.0.4
+sqlparse==0.5.1
+text-unidecode==1.3
+tzdata==2024.1
