--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501,
+    */bitrix24.py:R506
 max-complexity = 10
 max-line-length = 120
